Updated hindi translations in emulatorview module

--- a/emulatorview/src/main/res/values-hi/strings.xml
+++ b/emulatorview/src/main/res/values-hi/strings.xml
@@ -2,6 +2,6 @@
 
   <string name="paste_text">पेस्ट</string>
   <string name="copy_text">कॉपी</string>
-  <string name="text_selection_more">मोर…</string>
+  <string name="text_selection_more">अधिक…</string>
 
 </resources>
