--- a/lsp/java/src/main/res/values-hi/strings.xml
+++ b/lsp/java/src/main/res/values-hi/strings.xml
@@ -14,9 +14,7 @@
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
-
-
 <resources>
-    <string name="msg_not_thrown">\'%s\' बॉडी के मैथड में नहीं डाला जाता</string>
+    <string name="msg_not_thrown">\'%s\' मेथड की बॉडी में थ्रो नहीं किया गया है</string>
     <string name="msg_not_used">\'%s\' उपयोग नहीं किया गया है</string>
 </resources>
