--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -96,21 +96,21 @@
     <string name="preparing_first">Préparation en cours, la première compilation peut prendre de 10&#8211;15 minutes !</string>
     <string name="msg_gradle_terminated">Résultat de la compilation : %1$d</string>
     <string name="msg_gradlew_installation_failed">Impossible d\'installer Gradle Wrapper: %s</string>
-    <string name="msg_installing_gradlew">Gradle Wrapper n\'est pas disponible !\nInstallation de celui par défaut. Gradle v7.3 sera téléchargé si nécessaire.</string>
+    <string name="msg_installing_gradlew">Gradle Wrapper n\'est pas disponible\nInstallation de celui par défaut. Gradle v7.3 sera téléchargé si nécessaire.</string>
     <string name="msg_getting_daemom_status">Récupération du status du Daemon, veuillez patienter&#8230;</string>
     <string name="msg_daemons_stopped">Gradle Daemons arrêté</string>
     <string name="gradle_daemon_status">Statut du Daemon Gradle</string>
     <string name="msg_service_started">Lancement de la compilation </string>
     <string name="msg_starting_completion">Lancement des services</string>
     <string name="msg_starting_completion_failed">Impossible de lancer le Service des Completation</string>
-    <string name="msg_starting_daemon">Lancement d\'un daemon Gradle</string>
+    <string name="msg_starting_daemon">Lancement d\'un daemonz</string>
     <string name="title_install_apks">Installer l\'APK</string>
     <string name="title_clear_output">Nettoyer l\'output</string>
     <string name="install">Installer</string>
     <string name="run">Compiler</string>
     <string name="gradle">Gradle</string>
     <string name="title_first_build">Première compilation</string>
-    <string name="msg_first_build">C\'est la première compilation que vous effectuez après l\'installation de AndroidIDE. La première compilation prends le temps qu\'il faut pour télécharger les dépendances et les plugins. Ce processus peut prendre 10&#8211;15 minutes. Mais cela dépends totalement de votre connexion internet.\n\Soyez patient &#8230;</string>
+    <string name="msg_first_build">C\'est la première compilation que vous effectuez après l\'installation de AndroidIDE. La première compilation met un peu plus de temps car il télécharge les dépendances et les plugins. Ce processus peut prendre 10&#8211;15 minutes. Mais cela dépends totalement de votre connexion internet.\n\Soyez patient&#8230;</string>
     <string name="compiling">Compilation</string>
 
     <!-- Project -->
@@ -118,13 +118,13 @@
     <string name="minimum_sdk">SDK minimum</string>
     <string name="target_sdk">SDK actuel</string>
     <string name="new_project">Nouveau project</string>
-    <string name="package_name">om du package</string>
+    <string name="package_name">nom du package</string>
     <string name="project_app_name">Nom de l\'application</string>
     <string name="invalid_values">Champs Invalides</string>
     <string name="msg_no_projects">Mmmmm...Il semblerait que vous n\'ayez créé aucun projet.</string>
-    <string name="msg_create_new_project_greeting">Libérez vos talents de développeur ! Créer un projet et commencer à créer votre propre application</string>
+    <string name="msg_create_new_project_greeting">Libérez vos talents de développeur ! Créer un projet et commencez à créer votre propre application</string>
     <string name="title_confirm_open_project">Ouvrir le dernier projet ouvert ?</string>
-    <string name="msg_confirm_open_project">Voulez-vous ouvrir le dernier projet ouvert ? dernier projet ouvert :\n%s</string>
+    <string name="msg_confirm_open_project">Voulez-vous ouvrir le dernier projet ouvert ?\ndernier projet ouvert :\n%s</string>
     <string name="msg_init_project_failed">Impossible d\'initialiser le projet !</string>
     <string name="group_project">Projet</string>
     <string name="title_close_project">Fermer le projet</string>
@@ -144,7 +144,7 @@
     <string name="msg_min_sdk">Min SDK : %s</string>
     <string name="msg_target_sdk">SDK actuel : %s</string>
     <string name="title_confirm_project_close">Fermer le projet</string>
-    <string name="msg_confirm_project_close">Êtes vous sûres ? Tous les daemons de gradle seront arrêtés après la fermeture du projet.</string>
+    <string name="msg_confirm_project_close">Êtes vous sûres ? Tous les daemons seront arrêtés après la fermeture du projet.</string>
     <string name="project_exists">Un projet avec ce nom exist déjà !</string>
 
     <!-- Templates -->
