--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -103,7 +103,7 @@
     <string name="msg_service_started">सेवा शुरू</string>
     <string name="msg_starting_completion">सेवाएं शुरू करना</string>
     <string name="msg_starting_completion_failed">कंप्लीशन सेवाएं प्रारंभ करने में विफल</string>
-    <string name="msg_starting_daemon">एक ग्रैडल डेमॉन शुरू करना</string>
+    <string name="msg_starting_daemon">एक गरडले डेमॉन शुरू कर रहे है</string>
     <string name="title_install_apks">एपीके इंस्टॉल करें</string>
     <string name="title_clear_output">क्लियर आउटपुट</string>
     <string name="install">इंस्टॉल</string>
@@ -256,7 +256,7 @@
     <string name="idepref_editor_drawhexcolors_title">हेक्स रंग के स्ट्रिंग्स ड्रा करें</string>
     <string name="idepref_editor_drawhexcolors_summary">क्या एडिटर को हेक्स रंग की स्ट्रिंग ड्रा करनी चाहिए?</string>
     <string name="idepref_editor_title">एडिटर</string>
-    <string name="idepref_build_title">बनिर्माण सम्बंधित</string>
+    <string name="idepref_build_title">निर्माण सम्बंधित</string>
     <string name="title_open_projects">अंतिम प्रोजेक्ट खोलें</string>
     <string name="msg_open_projects">यदि चेक किया गया है, तो आईडीई पिछले खुले हुए प्रोजेक्ट को याद रखेगा और इसे अगले स्टार्टअप पर फिर से खोल दिया जाएगा।</string>
     <string name="title_confirm_project_open">प्रोजेक्ट के खोलने की पुष्टि करें</string>
@@ -348,5 +348,20 @@
     <string name="msg_reading_bootstrap">बूटस्ट्रैप आर्काइव रीड कर रहे…</string>
     <string name="msg_bootstrap_installation_error">बूटस्ट्रैप इंस्टॉलेशन निम्न एक्सेप्शन के साथ विफल रही।</string>
     <string name="title_translations">अनुवाद</string>
+    <string name="template_kotlin_basic">बेसिक कोटलिन प्रोजेक्ट</string>
+    <string name="template_description_kotlin_basic">टूलबार और फैब के साथ एक कोटलिन प्रोजेक्ट</string>
+    <string name="title_compiler_module_install">कम्पाइलर मॉडल इनस्टॉल हो रहा है</string>
+    <string name="msg_compiler_module_install">कम्पाइलर मॉडल इनस्टॉल हो रहा है।  कृपया प्रतीक्षा करे</string>
+    <string name="msg_compiler_module_install_failed">निम्नलिखित एरर के साथ कम्पाइलर मॉडल इनस्टॉल करने करने में असफल : %s</string>
+    <string name="msg_compiler_module_installed">कंपाइलर मॉड्यूल सफलतापूर्वक स्थापित किया गया!</string>
+    <string name="action_expand_selection">चयन का विस्तार करें</string>
+    <string name="idepref_java_matchLower_title">कम्पलेशन्स लोअर केस में मिलाये</string>
+    <string name="idepref_java_matchLower_summary">यदि सक्षम किया गया है, तो लोअर केस या अपर केस अक्षरों को टाइप करने से क्लास के नामों के साथ-साथ स्कोप मेंबर्स का भी सुझाव मिलेगा।</string>
+    <string name="idepref_editor_category_common">सामान्य</string>
+    <string name="idepref_editor_category_java">Java</string>
+    <string name="title_files_unsaved">फाइल्स सेव नहीं की गयी है</string>
+    <string name="msg_files_unsaved">कुछ फ़ाइलें सेव नहीं की गई हैं। क्या आप बंद करने से पहले उन्हें सेव करना चाहेंगे? सेव न की गयी फाइल्स : %s</string>
+    <string name="idepref_editor_autoSave_title">फ़ाइलें बंद करने से पहले सेव करे</string>
+    <string name="idepref_editor_autoSave_summary">फ़ाइलों को बंद करने से पहले सेव करे। यह एक प्रायोगिक विशेषता है। आपसे फ़ाइलों को स्वयं सेव करने की अपेक्षा की जाती है।</string>
 
 </resources>
