--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -54,4 +54,26 @@
     <string name="menu_uncomment_line">Раскомментировать строку</string>
     <string name="view_diags">Диагностика</string>
 
+    <!-- Build Tools Installation -->
+    <string name="title_installation_failed">Установка не удалась</string>
+    <string name="msg_installation_failed">Процесс установки прерван с кодом %1$d. Убедись, что вы скачли оригинальные инструменты сборки.\n\nВы можете попробовать очистить данные AndroidIDE и установить инструменты сборки снова. \n\n%2$s</string>
+    <string name="choose">Выбрать</string>
+    <string name="get_ready_for_something_awesome">Приготовьтесь к чему-то замечательному!</string>
+    <string name="androidide_build_tools">Инструменты Сборки AndroidIDE</string>
+    <string name="install_build_tools_required_b">Установите Инструменты Сборки, необходимые для работы AndroidIDE</string>
+    <string name="choose_directory_which_contain">Выберите директорию, содержащую инструменты сборки.</string>
+    <string name="click_install_button_to_st">Нажмите на кнопку \'установить\', чтобы начать процесс установки.</string>
+    <string name="msg_picked_isnt_dir">Выбранный файл не является директорией!</string>
+    <string name="msg_pick_single_file">Пожалуйста, выберите лишь одну директорию</string>
+    <string name="msg_file_doesnt_exist">Файл не существует!</string>
+    <string name="msg_pick_files">Пожалуйста, выберите файлы!</string>
+    <string name="msg_download_instructions">1. Скачайте инструменты сборки с сайта AndroidIDE.\n2. Переместите скачанные архивы в определённую директорию. \n3. Выберите эту директорию, используя кнопку ниже. \n4. Нажмите кнопку устаноки. \n5. Начнётся процесс установки.\n\nПроцесс установки займет около 5–10 минутв зависимости от производительности вашего устройства. Просим вашего терпения!</string>
+    <string name="msg_installable_files">Файлы для установки\n\n%s</string>
+    <string name="title_restart">Пожалуйста, перезапустите приложение</string>
+    <string name="msg_restart">Установка успешно завершена. Пожалуйста, перезапустите AndroidIDE.</string>
+    <string name="please_wait">Пожалуйста, подождите немного &#8230;</string>
+    <string name="title_device_not_supported">Устройство не поддерживается</string>
+    <string name="msg_device_not_supported">К сожаленю, на данный момент ваше устройство не поддерживается. Приносим свои извинения.\n\nПоддерживаемые ABI: aarch64 и armeabi-v7a</string>
+    
+
 </resources>
